--- a/views/index/details.ejs
+++ b/views/index/details.ejs
@@ -1,6 +1,6 @@
-<%- include("../includes/head" ,  {pageTitle : "RJ Police"}) %>
+<%- include("../includes/head" ,  {pageTitle : "Home"}) %>
 <link rel="stylesheet" href="/styles/details.css">
-<link rel="stylesheet" href="styles/sidebar.css" />
+<link rel="stylesheet" href="/styles/sidebar.css" />
 </head>
 <!-- Sidebar extra functioning starts -->
 <script>
@@ -49,12 +49,12 @@
                     </div>
                 </div>
                 <div class="extra-buttons">
-                    <div class="view-history-btn util-btn">
+                    <!-- <div class="view-history-btn util-btn">
                         <a href="#">View History</a>
-                    </div>
+                    </div> -->
                     <% if(tableArray.length>0) { %>
                     <div class="view-transactions-btn util-btn">
-                        <a href="/detail-transactions">View All Transactions</a>
+                        <a href="/all-transactions-history">View All Transactions</a>
                     </div>
                     <% } %>
                 </div>
